--- a/Analysis.Rmd
+++ b/Analysis.Rmd
@@ -503,8 +503,43 @@ dependent_response_ind <- "timeRemaining_ind"
 y_label_ind <- "Time Remaining"
 x_label_ind <- "Target"
 title_response_ind <- "Time Remaining (Individual) Vs. Target"
+value_threshold <- 120
 plot_name <- "Bar_TimeRemaining_ByTarget_BySessionOrder_Ind.png"
 setwd(figure_directory)
+
+plot_data_ind <- ind_data %>%
+  select(Target, SessionOrder, dependent_response_ind, Player_ID) %>%
+  mutate(rank_order = -rank(.data[[dependent_response_ind]])) %>%
+  mutate(above_value_threshold = .data[[dependent_response_ind]] > value_threshold)
+
+names <- ifelse(plot_data_ind[,"above_value_threshold"], as.character( plot_data_ind[["Player_ID"]]), "")
+
+ggplot(data = plot_data_ind, 
+       aes(x = factor(SessionOrder), 
+                  y = .data[[dependent_response_ind]], 
+                  fill = Player_ID, group = rank_order,
+                  label = names )) +
+  geom_bar(stat = "identity", position = "dodge") + 
+  facet_grid(. ~ Target) + 
+  guides(fill = FALSE) +
+  coord_flip()+
+  xlim("4", "3", "2") +
+  labs(y = y_label_ind, x = x_label_ind, title = title_response_ind, fill = "Player_ID") +
+  ggsave(filename = plot_name)
+
+ggplot(data = plot_data_ind, 
+       aes(x = factor(SessionOrder), 
+           y = .data[[dependent_response_ind]], 
+           fill = Player_ID, group = rank_order,
+           label = names )) +
+  geom_text_repel(stat = "identity", position = position_jitterdodge(), force = 5) +
+  geom_point(position = position_jitterdodge()) +
+  facet_grid(. ~ Target) + 
+  guides(fill = FALSE) +
+  coord_flip()+
+  xlim("4", "3", "2") +
+  labs(y = y_label_ind, x = x_label_ind, title = title_response_ind, fill = "Player ID") +
+  ggsave(filename = "Point_TimeRemaining_ByTarget_BySessionOrder_Ind.png", width = 10)
 
 sumDataCount <- plot_data_ind %>%
   group_by(Target, SessionOrder) %>%
@@ -522,6 +557,13 @@ sumCountFastParticipants <- plot_data_ind %>%
 sumCountFastParticipants %>%
   kable() %>%
   kable_styling()
+dependent_response_ind <- "timeRemaining_ind"
+y_label_ind <- "Time Remaining"
+x_label_ind <- "Target"
+title_response_ind <- "Time Remaining (Individual) Vs. Target"
+plot_name <- "InteractionPlot_TimeRemaining_ByTarget_BySessionOrder_Ind.png"
+setwd(figure_directory)
+
 plot_data_ind <- ind_data %>%
   select(Target, SessionOrder, dependent_response_ind) %>%
   group_by(SessionOrder, Target) %>%
@@ -536,6 +578,7 @@ ggplot(data = plot_data_ind, aes(x = Target, y = Average, color = SessionOrder, 
   geom_errorbar(aes(ymin = Average - StEr, ymax = Average + StEr), width = 0.2) +
   labs(y = y_label_ind, x = x_label_ind, title = title_response_ind, fill = "Players") + 
   ggsave(filename = plot_name)
+
 ```
 
 There appears to be an interaction between Target and Session Order. Overall, the amount of time at the end of the session increases over time. It looks like there is a considerable increase in the amount of time remaining in the Team condition. This substantial increase suggests that giving team feedback results in teams moving faster. It looks like there is something exciting happening in the team and Ind_Team condition. In the individual condition, there is a steady increase in the amount of time remaining. In the Ind_Team condition, there was little to no change in the time remaining between session 2 and 3. 
