--- a/Analysis.Rmd
+++ b/Analysis.Rmd
@@ -9,7 +9,7 @@ output:
 csl: apa.csl
 Date: '2019-02-01'
 editor_options: 
-  chunk_output_type: console
+  chunk_output_type: inline
 ---
 
 ```{r setup, include=FALSE}
